--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ _site/
 scripts/smoke/*-main/
 scripts/memory/project/src/pages/
 *.log
-package-lock.json
+# package-lock.json
 .turbo/
 .eslintcache
 .pnpm-store
